--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.card-box {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 10px 10px  10px rgb(211, 211, 211);
+}
+
+.submit-button{
+  width: 18rem;
+  text-align: center;
+}
+
+.card-title{
+  text-align: center;
+  font-family: system-ui;
+}
